# crewdev

./: .gitignore  DYNAMIC_TASK_GUIDE.md  ENGINEER_DEMO_README.md  ENGINEER_DEMO_SUMMARY.md  README.md  THOUGHT_PROCESS_LOGGING.md  TOOLS_GUIDE.md  direct_file_creation_demo.py  docker-compose.yml  engineer_file_creation_demo.py  example_dynamic_tasks.py  example_usage.py  example_with_tools.py  litellm.config.toml  project_deliverables.md  pyproject.toml  simple_dynamic_demo.py  simple_engineer_demo.py  test_llm_config.py  test_logging.py  test_simple.py  test_thought_logging_demo.py  test_tools.py  verify_setup.py
src/crewdev/: crew.py  dynamic_task_manager.py  main.py
src/crewdev/config/: agents.yaml  logging_config.yaml  tasks.yaml
src/crewdev/tools/: __init__.py  dev_tools.py  dynamic_task_tool.py  execution_tools.py  file_tools.py
test_files/: data.json  file_creation_results.md  test.py
